--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,29 @@
   font-family: FontAwesome-Regular;
   src: url('../fonts/FontAwesome-Regular.otf');
 }
-
+*:focus {
+    outline: none;
+}
 :root{
   --h_color: #2d3950;
   --com_back: #f6f9f9;
   --white: #ffffff;
+}
+
+html{
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  scroll-padding-top: 65px;
+}
+html::-webkit-scrollbar{
+  width: 10px;
+}
+html::-webkit-scrollbar-track{
+  background: #fff;
+}
+html::-webkit-scrollbar-thumb{
+  background: #15a4fa;
+  border-radius: 50px;
 }
 
 body{
@@ -29,6 +47,20 @@ body{
   font-size: 20px;
   color: #999999;
 }
+
+/* button,
+input,
+textarea,
+button:focus,
+input:focus,
+textarea:focus {
+  background-color: transparent;
+} */
+
+a,
+button {
+  cursor: pointer;
+}
 /* common end */
 
 /* header start */
@@ -38,7 +70,7 @@ header{
 }
 .wrap72{
   margin: 0 auto;
-  width: 72%;
+  width: 72.1%;
   overflow: hidden;
   /* border: 1px solid; */
 }
@@ -176,11 +208,51 @@ header{
 .show_img{
   width: 31%;
   margin: 1.167%;
+  position: relative;
   transition: 0.5s all ease-in-out;
   float: left;
 }
-.show_img img:hover{
+/* .show_img:hover{
   transform: scale(1.05);
+} */
+.overlay {
+  width: 0;
+  height: 0;
+  background: #2bacf7;
+  position: absolute;
+  top: 0;
+  right: 0;
+  opacity: 0.85;
+  transition: 0.5s;
+}
+.show_img:hover .overlay {
+  width: 100%;
+  height: 100%;
+}
+.con_zoom_link{
+  margin: 0 auto;
+  padding-top: 32%;
+  width: 26.11%;
+  overflow: hidden;
+}
+.zoom{
+  width: 44.68%;
+  float: left;
+  display: inline-block;
+}
+.zoom img{
+  width: 100%;
+}
+.link{
+  width: 44.68%;
+  float: right;
+  display: inline-block;
+}
+.link:hover{
+  background-color: #15a4fa;
+}
+.link img{
+  width: 100%;
 }
 .show_img_width{
   width: 100%;
@@ -194,7 +266,7 @@ header{
   background-position: center;
 }
 .form_container{
-  width: 59%;
+  width: 48%;
   margin: 0 auto;
   text-align: center;
   margin-bottom: 10px;
@@ -213,7 +285,7 @@ header{
 }
 
 /*Form Start*/
-.form {
+.form{
   width: 100%;
   margin: 0 auto 90px;
   text-align: center;
@@ -221,15 +293,20 @@ header{
   padding-bottom: 30px;
 }
 
-.in-field {
-  width: 550px;
-  height: 20px;
-  padding: 10px;
+.form-field-common{
+  width: 100%;
+  height: 50px;
+  margin-bottom: 17px;
+  font-family: Lato-Regular;
+  font-weight: 400;
+  font-size: 15px;
   background: none;
-  border: none;
   border: 1.2px solid #999999;
   border-radius: 3px;
   color: #999999;
+}
+.form-field-common:last-child{
+  margin-bottom: 0;
 }
 
 .message {
@@ -240,26 +317,41 @@ header{
   margin-top: 30px;
   align-items: center;
   /* border: 1px solid white; */
+  overflow: hidden;
 }
 .left_align{
+  width: 33%;
   display: inline-block;
-  margin-top: 18px;
+  margin-top: 2.5%;
   float: left;
+  overflow: hidden;
+  /* border: 1px solid red; */
+}
+input{
+  width: 15px;
+  height: 15px;
 }
 .subscribe{
-  /* display: inline-block; */
-
-
+  margin-top: 2px;
+  float: left;
+  accent-color: #99a0a9;
 }
+
 .subs{
   font-size: 15px;
+  color: white;
+  float: right;
 }
+
 .right_align{
+  width: 25.7%;
   display: inline-block;
   float: right;
 }
 .submit{
-  padding: 15px 55px;
+  width: 100%;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background: transparent;
   border: none;
   border: 1px solid #15a4fa;
